--- a/src/main/resources/templates/user-list.html
+++ b/src/main/resources/templates/user-list.html
@@ -1,99 +1,218 @@
-<!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
+<!doctype html>
+<html lang="ru" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Admin Panel</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <style>
-        .sidebar {
-            height: 100vh;
-            background-color: #f8f9fa;
-            padding: 20px;
-        }
-        .admin-panel-info {
-            background-color: #343a40;
-            color: white;
-            padding: 10px;
-        }
-        .table-header {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-        }
-        .table-header .btn-new-user {
-            margin-right: 20px;
-        }
-    </style>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 </head>
 <body>
-
-<div class="admin-panel-info">
-    <div class="container">
-        <span sec:authentication="name">[Username]</span> with roles: 
-        <span sec:authentication="authorities">[Roles]</span>
+<header>
+    <div class="container-fluid bg-dark text-white">
+        <div class="row align-items-center" style="height: 60px;">
+            <div class="col">
+                Email: <span th:text="${principal.username}">EMAIL</span> with roles: <span th:text="${principal.authoritiesString}">Roles</span>
+            </div>
+            <div class="col-auto">
+                <form th:action="@{/logout}" method="post">
+                    <input class="btn btn-outline-secondary" type="submit" value="Logout"/>
+                </form>
+            </div>
+        </div>
     </div>
-</div>
-
+</header>
 <div class="container-fluid">
-    <div class="row">
-        <nav class="col-md-2 d-none d-md-block bg-light sidebar">
-            <div class="sidebar-sticky">
-                <ul class="nav flex-column">
-                    <li class="nav-item">
-                        <a class="nav-link active" href="#" th:href="@{/admin}">Admin</a>
-                    </li>
-                    <li class="nav-item" sec:authorize="hasRole('USER')">
-                        <a class="nav-link" href="#" th:href="@{/user}">User</a>
-                    </li>
-                </ul>
-            </div>
-        </nav>
+    <div class="row" style="height: calc(100vh - 60px);">
+        <div class="col-2 py-4 px-0">
+            <ul class="nav flex-column nav-pills">
+                <li class="nav-item">
+                    <a class="nav-link active" data-toggle="pill" href="#adminPanel">Admin</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" data-toggle="pill" href="#userPanel">User</a>
+                </li>
+            </ul>
+        </div>
+        <div class="col-10 py-4" style="background-color: rgb(248, 249, 250);">
+            <div class="tab-content">
+                <div id="adminPanel" class="tab-pane fade show active">
+                    <h1>Admin Panel</h1>
+                    <ul class="nav nav-tabs">
+                        <li class="nav-item">
+                            <a class="nav-link active" data-toggle="tab" href="#allUsers">Users table</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" data-toggle="tab" href="#newUser">New User</a>
+                        </li>
+                    </ul>
+                    <div class="tab-content">
+                        <div id="allUsers" class="tab-pane fade show active">
+                            <h4>AllUsers</h4>
+                            <table class="table table-striped">
+                                <thead>
+                                <tr>
+                                    <th>ID</th>
+                                    <th>First Name</th>
+                                    <th>Last Name</th>
+                                    <th>Email</th>
+                                    <th>Role</th>
+                                    <th>Edit</th>
+                                    <th>Delete</th>
+                                </tr>
+                                </thead>
+                                <tbody>
+                                <tr th:each="user : ${users}">
+                                    <td th:text="${user.id}"></td>
+                                    <td th:text="${user.firstName}"></td>
+                                    <td th:text="${user.lastName}"></td>
+                                    <td th:text="${user.email}"></td>
+                                    <td th:text="${user.rolesString}"></td>
+                                    <td>
+                                        <button type="button" class="btn btn-primary edit-user"
+                                                th:data-userid="${user.id}"
+                                                th:data-firstname="${user.firstName}"
+                                                th:data-lastname="${user.lastName}"
+                                                th:data-email="${user.email}"
+                                                data-toggle="modal">Edit</button>
+                                    </td>
+                                    <td>
+                                        <button type="button" class="btn btn-danger delete-user"
+                                                th:data-userid="${user.id}"
+                                                data-toggle="modal">Delete</button>
+                                    </td>
+                                </tr>
+                                </tbody>
 
-        <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
-            <h2>Admin panel</h2>
-            <div class="table-header">
-                <h3>All Users</h3>
-                <a href="#" th:href="@{/admin/add}" class="btn btn-primary btn-new-user">New User</a>
-            </div>
-            <table class="table table-striped table-hover">
-                <thead>
-                    <tr>
-                        <th>ID</th>
-                        <th>First Name</th>
-                        <th>Last Name</th>
-                        <th>Email</th>
-                        <th>Roles</th>
-                        <th>Edit</th>
-                        <th>Delete</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr th:each="user : ${users}">
-                        <td th:text="${user.id}">1</td>
-                        <td th:text="${user.firstName}">John</td>
-                        <td th:text="${user.lastName}">Doe</td>
-                        <td th:text="${user.email}">john.doe@example.com</td>
-                        <td>
-                            <span th:each="role, iterStat : ${user.roles}" th:text="${role.name} + (iterStat.last ? '' : ', ')">Admin, User</span>
-                        </td>
-                        <td>
-                            <a th:href="@{/admin/edit(id=${user.id})}" class="btn btn-sm btn-primary">Edit</a>
-                        </td>
-                        <td>
-                            <form th:action="@{/admin/delete}" method="post" onsubmit="return confirm('Are you sure you want to delete this user?');">
-                                <input type="hidden" name="userId" th:value="${user.id}" />
-                                <button type="submit" class="btn btn-sm btn-danger">Delete</button>
+                            </table>
+                        </div>
+                        <div id="newUser" class="tab-pane fade">
+                            <h4>Add New User</h4>
+                            <form th:action="@{/admin/add}" method="post" th:object="${newUser}">
+                                <div class="form-group">
+                                    <label for="firstName">First Name:</label>
+                                    <input type="text" class="form-control" th:field="*{firstName}" id="firstName">
+                                </div>
+                                <div class="form-group">
+                                    <label for="lastName">Last Name:</label>
+                                    <input type="text" class="form-control" th:field="*{lastName}" id="lastName">
+                                </div>
+                                <div class="form-group">
+                                    <label for="email">Email:</label>
+                                    <input type="email" class="form-control" th:field="*{email}" id="email">
+                                </div>
+                                <div class="form-group">
+                                    <label for="password">Password:</label>
+                                    <input type="password" class="form-control" th:field="*{password}" id="password">
+                                </div>
+                                <div class="form-group">
+                                    <label for="roles">Roles:</label>
+                                    <select multiple class="form-control" th:field="*{roles}" id="roles">
+                                        <option th:each="role : ${allRoles}" th:value="${role.id}" th:text="${role.name}"></option>
+                                    </select>
+                                </div>
+                                <button type="submit" class="btn btn-success">Add User</button>
                             </form>
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
-        </main>
+                        </div>
+                    </div>
+                </div>
+                <div id="userPanel" class="tab-pane fade">
+                    <h1>User Information</h1>
+                    <div>About user information</div>
+                    <!-- User details and other content go here -->
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="modal fade" id="editUserModal" tabindex="-1" role="dialog" aria-labelledby="editUserLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="editUserLabel">Edit User</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <!-- Форма редактирования -->
+                <form action="/admin/edit" method="post">
+                    <input type="hidden" id="editUserId" name="userId">
+                    <div class="form-group">
+                        <label for="editUserFirstName">First Name:</label>
+                        <input type="text" class="form-control" id="editUserFirstName" name="firstName">
+                    </div>
+                    <div class="form-group">
+                        <label for="editUserLastName">Last Name:</label>
+                        <input type="text" class="form-control" id="editUserLastName" name="lastName">
+                    </div>
+                    <div class="form-group">
+                        <label for="editUserEmail">Email:</label>
+                        <input type="email" class="form-control" id="editUserEmail" name="email">
+                    </div>
+                    <button type="submit" class="btn btn-primary">Save Changes</button>
+                </form>
+            </div>
+        </div>
     </div>
 </div>
 
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.9.4/dist/umd/popper.min.js"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+<!-- Delete User Modal -->
+<div class="modal fade" id="deleteUserModal" tabindex="-1" role="dialog" aria-labelledby="deleteUserLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="deleteUserLabel">Confirm Delete</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                Are you sure you want to delete this user?
+            </div>
+            <div class="modal-footer">
+                <form th:action="@{/admin/delete}" method="post">
+                    <input type="hidden" id="deleteUserId" name="userId">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                    <button type="submit" class="btn btn-danger">Delete</button>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+<script>
+    $(document).ready(function() {
+        $('a[data-toggle="pill"]').on('shown.bs.tab', function (e) {
+            e.target // newly activated tab
+            e.relatedTarget // previous active tab
+        })
+    });
+
+    $(document).ready(function() {
+        $('.edit-user').on('click', function() {
+            var userId = $(this).data('userid');
+            var firstName = $(this).data('firstname');
+            var lastName = $(this).data('lastname');
+            var email = $(this).data('email');
+
+            $('#editUserId').val(userId);
+            $('#editUserFirstName').val(firstName);
+            $('#editUserLastName').val(lastName);
+            $('#editUserEmail').val(email);
+
+            $('#editUserModal').modal('show');
+        });
+
+        $('.delete-user').on('click', function() {
+            var userId = $(this).data('userid');
+            $('#deleteUserId').val(userId);
+            $('#deleteUserModal').modal('show');
+        });
+    });
+</script>
 </body>
 </html>
